# OUTLIER_MCB

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OUTLIER_MCB_SPEC.md  README.md  SECURITY.md  pyproject.toml
OUTLIER_MCB/: __init__.py  __main__.py  _solver_common.py  ablation.py  abstraction.py  activate.md  activation.py  active_experiment.py  aesthetics.py  affect.py  agents.py  analogy.py  artifacts.py  assumption_diff.py  assumption_graph.py  atp_backend.py  autonomous_discovery.py  barriers.py  box_map.py  capabilities.py  cascade.py  certificates.py  ci.py  claim_ladder.py  cli.py  closure_recognition.py  closures.py  cognitive_growth.py  cognitive_protocols.py  compression.py  conjecture_search.py  core.py  creative_search.py  cvc5_backend.py  demo.py  dialectic.py  discovery.py  discovery_memory.py  divergence.py  divergent_runner.py  (+103 more)
evals/: README.md  __init__.py  baselines.py  blind_discovery_eval.py  diagnostics.py  discovery_battery.py  discovery_eval.py  evolution_eval.py  frontier_baseline.json  frontier_regression.py  generative_eval.py  llm_benchmark.py  multi_metric_loop.py  readiness_openended.py  run_eval.py  scorers.py  self_improve_loop.py  solver_regression.py  tasks.jsonl
examples/: agnostic_domains_demo.py  greenstar_demo.py  hard_problem_frontier.py  llm_loop_demo.py  portfolio_demo.py  self_repair_demo.py  verified_novelty_fitness_demo.py
tests/: test_ablation.py  test_activation.py  test_aesthetics.py  test_affect.py  test_agents_trace.py  test_agnostic_frontier.py  test_anomaly_mining.py  test_atp_backend.py  test_audit_fixes.py  test_autonomous_discovery.py  test_backend_certificates.py  test_barriers.py  test_benchmark_feynman.py  test_benchmark_gplearn.py  test_blend_in_invent.py  test_blind_discovery_eval.py  test_bug_fixes.py  test_cache_and_confidence.py  test_capabilities.py  test_causal_discovery.py  test_certificates.py  test_claim_ladder.py  test_closure_recognition.py  test_closures_theorems.py  test_cognitive_growth.py  test_cognitive_protocols.py  test_competitor_features.py  test_composed_tools.py  test_conceptual_blending.py  test_conjecture_search.py  test_creative_dimensions.py  test_cvc5_backend.py  test_default_llm.py  test_demo.py  test_discovery_eval.py  test_discovery_inventor.py  test_discovery_memory.py  test_discovery_memory_in_invent.py  test_evals.py  test_evaluator_synthesis.py  (+72 more)
(+39 files in other folders)
